<resources>
    <string name="app_name">ChefIn.</string>
    <string name="activity2_1">VEG</string>
    <string name="activity2_2">NON-VEG</string>
    <string name="activity2_3">SNACKS</string>
    <string name="activity2_4">OTHERS</string>
    <string name="activity2_5">SOUTH INDIAN</string>
    <string name="activity2_6">CHINESE</string>
    <string name="activity1_1_1">ADARSH NAGAR</string>
    <string name="activity1_1">AIIMS</string>
    <string name="activity1_2">AKSHARDHAM</string>
    <string name="activity1_3">ANAND VIHAR</string>
    <string name="activity1_4">ARJAN GARH</string>
    <string name="activity1_5">ASHOK PARK MAIN</string>
    <string name="activity1_6">AZADPUR</string>
    <string name="activity1_7">BADARPUR</string>
    <string name="activity1_8">BADKAL MOR</string>
    <string name="activity1_9">BARAKHAMBA</string>
    <string name="activity1_10">BATA CHOWK</string>
    <string name="activity1_11">BOTANICAL GARDEN</string>
    <string name="activity1_12">CENTRAL SECRETARIATE</string>
    <string name="activity1_13">CHANDNI CHOWK</string>
    <string name="activity1_14">CHAWRI BAZAR</string>
    <string name="activity1_15">CHHATARPUR</string>
    <string name="activity1_16">CIVIL LINES</string>
    <string name="activity1_17">DELHI GATE</string>
    <string name="activity1_18">DHAULA KUAN</string>
    <string name="activity1_19">DILSHAD GARDEN</string>
    <string name="activity1_20">DWARKA MOR</string>
    <string name="activity1_21">DWARKA</string>
    <string name="activity1_22">DWARKA SECTOR-10</string>
    <string name="activity1_23">DWARKA SECTOR-11</string>
    <string name="activity1_24">DWARKA SECTOR-12</string>
    <string name="activity1_25">DWARKA SECTOR-13</string>
    <string name="activity1_26">DWARKA SECTOR-14</string>
    <string name="activity1_27">DWARKA SECTOR-21</string>
    <string name="activity1_28">ESCORTS MUJESAR</string>
    <string name="activity1_29">GTB NAGAR</string>
    <string name="activity1_30">GHITORNI</string>
    <string name="activity1_31">GOLF COURSE</string>
    <string name="activity1_32">GOVIND PURI</string>
    <string name="activity1_33">GREEN PARK</string>
    <string name="activity1_34">GURUDRONACHARYA</string>
    <string name="activity1_35">HAIDERPUR BADLI MOR</string>
    <string name="activity1_36">HAUZ KHAS</string>
    <string name="activity1_37">HUDA CITY CENTER</string>
    <string name="activity1_38">IFFCO CHOWK</string>
    <string name="activity1_39">IGI AIRPORT</string>
    <string name="activity1_40">INA</string>
    <string name="activity1_41">ITO</string>
    <string name="activity1_42">INDER LOK</string>
    <string name="activity1_43">INDRAPRASTHA</string>
    <string name="activity1_44">JAHANGIRPURI</string>
    <string name="activity1_45">JAMA MASJID</string>
    <string name="activity1_46">JANAK PURI EAST</string>
    <string name="activity1_47">JANAK PURI WEST</string>
    <string name="activity1_48">JANGPURA</string>
    <string name="activity1_49">JANPATH</string>
    <string name="activity1_50">JASOLA APOLLO</string>
    <string name="activity1_51">JAWAHAR LAL NEHRU STADIUM</string>
    <string name="activity1_52">JHANDEWALAN</string>
    <string name="activity1_53">JHILMIL</string>
    <string name="activity1_54">JORBAGH</string>
    <string name="activity1_55">KAILASH COLONY</string>
    <string name="activity1_56">KALKAJI MANDIR</string>
    <string name="activity1_57">KANHIYA NAGAR</string>
    <string name="activity1_58">KARKAR DUMA</string>
    <string name="activity1_59">KAROL BAGH</string>
    <string name="activity1_60">KASHMIRI GATE</string>
    <string name="activity1_61">KAUSHAMBI</string>
    <string name="activity1_62">KESHAV PURAM</string>
    <string name="activity1_63">KHAN MARKET</string>
    <string name="activity1_64">KIRTI NAGAR</string>
    <string name="activity1_65">KOHAT ENCLAVE</string>
    <string name="activity1_66">LAJPAT NAGAR</string>
    <string name="activity1_67">LAL QUILA</string>
    <string name="activity1_68">LAXMI NAGAR</string>
    <string name="activity1_69">LOK KALYAN MARG</string>
    <string name="activity1_70">MG ROAD</string>
    <string name="activity1_71">MADI PUR</string>
    <string name="activity1_72">MALVIYA NAGAR</string>
    <string name="activity1_73">MANDI HOUSE</string>
    <string name="activity1_74">MANSAROVAR PARK</string>
    <string name="activity1_75">MAYUR VIHAR EXT</string>
    <string name="activity1_76">MAYUR VIHAR-1</string>
    <string name="activity1_77">MEWALA MAHARAJPUR</string>
    <string name="activity1_78">MODLE TOWN</string>
    <string name="activity1_79">MOHAN ESTATE</string>
    <string name="activity1_80">MOOLCHAND</string>
    <string name="activity1_81">MOTI NAGAR</string>
    <string name="activity1_82">MUNDKA</string>
    <string name="activity1_83">NHPC CHOWK</string>
    <string name="activity1_84">NANGLOAI</string>
    <string name="activity1_85">NANGLOAI RAILWAY STATION</string>
    <string name="activity1_86">NAWADA</string>
    <string name="activity1_87">NEELAM CHOWK AJRONDA</string>
    <string name="activity1_88">NEHRU PLACE</string>
    <string name="activity1_89">NETAJI SUBHASH PLACE</string>
    <string name="activity1_90">NEW DELHI</string>
    <string name="activity1_91">NEW ASHOK NAGAR</string>
    <string name="activity1_92">NIRMAN VIHAR</string>
    <string name="activity1_93">NOIDA CITY CENTER</string>
    <string name="activity1_94">NOIDA SECTOR 15</string>
    <string name="activity1_95">NOIDA SECTOR 16</string>
    <string name="activity1_96">NOIDA SECTOR 18</string>
    <string name="activity1_97">OLD FARIDABAD</string>
    <string name="activity1_98">PASHCHIM VIHAR(EAST)</string>
    <string name="activity1_99">PASHCHIM VIHAR(WEST)</string>
    <string name="activity1_100">PATEL CHOWK</string>
    <string name="activity1_101">PATEL NAGAR</string>
    <string name="activity1_102">PEERA GARHI</string>
    <string name="activity1_103">PITAM PURA</string>
    <string name="activity1_104">PRAGATI MAIDAN</string>
    <string name="activity1_105">PRATAP NAGAR</string>
    <string name="activity1_106">PREET VIHAR</string>
    <string name="activity1_107">PUL BANGASH</string>
    <string name="activity1_108">PUNJABI BAGH</string>
    <string name="activity1_109">QUTUB MINAR</string>
    <string name="activity1_110">RK ASHRAM MARG</string>
    <string name="activity1_111">RAJDHANI PARK</string>
    <string name="activity1_112">RAJENDRA PLACE</string>
    <string name="activity1_113">RAJIV CHOWK</string>
    <string name="activity1_114">RAJOURI GARDEN</string>
    <string name="activity1_115">RAMESH NAGAR</string>
    <string name="activity1_116">RITHALA</string>
    <string name="activity1_117">ROHINI SECTOR 18</string>
    <string name="activity1_118">ROHINI WEST</string>
    <string name="activity1_119">ROHINI EAST</string>
    <string name="activity1_120">SAKET</string>
    <string name="activity1_121">SAMAYPUR BADLI</string>
    <string name="activity1_122">SARAI</string>
    <string name="activity1_123">SARITA VIHAR</string>
    <string name="activity1_124">SATGURU RAM SINGH MARG</string>
    <string name="activity1_125">SECTOR-28</string>
    <string name="activity1_126">SEELAM PUR</string>
    <string name="activity1_127">SHADI PUR</string>
    <string name="activity1_128">SHAHDRA</string>
    <string name="activity1_129">SHASTRI NAGAR</string>
    <string name="activity1_130">SHASTRI PARK</string>
    <string name="activity1_131">SHIVAJI STADIUM</string>
    <string name="activity1_132">SIKANDERPUR</string>
    <string name="activity1_133">SUBASH NAGAR</string>
    <string name="activity1_134">SULTANPUR</string>
    <string name="activity1_135">SURAJMAL STADIUM</string>
    <string name="activity1_136">TAGORE GARDEN</string>
    <string name="activity1_137">TILAK NAGAR</string>
    <string name="activity1_138">TIS HAZARI</string>
    <string name="activity1_139">TUGLAKABAD</string>
    <string name="activity1_140">UDYOG BHAWAN</string>
    <string name="activity1_141">UTTAM NAGAR EAST</string>
    <string name="activity1_142">UTTAM NAGAR WEST</string>
    <string name="activity1_143">VAISHALI</string>
    <string name="activity1_144">VIDHAN SABHA</string>
    <string name="activity1_145">VISWAVIDYALAYA</string>
    <string name="activity1_146">WELCOME</string>
    <string name="activity1_147">YAMUNA BANK</string>
    <string name="activity1_148">DWARKA SECTOR-8</string>
    <string name="activity1_149">DWARKA SECTOR-9</string>
    <string name="activity1_150">HARKESH NAGAR OKHLA</string>
    <string name="activity1_151">UDYOG NAGAR</string>
    <string name="title_activity_fargment">MainActivity</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="metro_list">
        <item> Laxmi nagar</item>
        <item> Uttam nagar</item>
        <item> Aiims</item>
        <item> Sarojini nagar</item>
        <item> Metro5</item>
        <item> Metro6</item>
    </string-array>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">WELCOME GOOD-LOOKING PEOPLE!</string>
    <string name="slide_1_desc">ChefIn. is the only restaurant locating app which gives you the best taste near every metro station!</string>

    <string name="slide_2_title">WHY US?</string>
    <string name="slide_2_desc"> Features like DISCOVERIES and NIGHT-CHEFS helps you see a newer version of Delhi!</string>

    <string name="slide_3_title"> WAIT A SECOND!</string>
    <string name="slide_3_desc"> Taste is something that differs from person to person. So, there are chances that we may be wrong at some places!</string>

    <string name="slide_4_title">WHO ARE WE?</string>
    <string name="slide_4_desc">We are simply a restaurant locating app. We do not deliver food, yet!</string>


</resources>
