<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="example.user.chefin.Grid_Activity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_veg"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:gravity="center"
            android:onClick="getmetrochoice"
            android:tag='a'
            android:text="@string/activity2_1"
            android:background="@drawable/veg"
            android:textColor="#ffff"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_nonveg"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:gravity="center"
            android:onClick="getmetrochoice"
            android:tag='b'
            android:text="@string/activity2_2"
            android:background="@drawable/nonveg"
            android:textColor="#ffff"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_snacks"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:gravity="center"
            android:onClick="getmetrochoice"
            android:background="@drawable/snacks1"
            android:tag='c'
            android:text="@string/activity2_3"
            android:textColor="#ffff"
            android:textSize="35sp" />
        <Button
            android:id="@+id/button_southindian"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:onClick="getmetrochoice"
            android:text="@string/activity2_5"
            android:tag='d'
            android:background="@drawable/south1"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#ffff"
            />

        <Button
            android:id="@+id/button_chinese"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:text="@string/activity2_6"
            android:tag='e'
            android:background="@drawable/chinese1"
            android:onClick="getmetrochoice"
            android:textSize="35sp"
            android:gravity="center"
            android:textColor="#ffff"
            />
        <Button
            android:id="@+id/button_others"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:text="@string/activity2_4"
            android:tag='f'
            android:background="@drawable/others1"
            android:onClick="getmetrochoice"
            android:textSize="35sp"
            android:gravity="center"
            android:textColor="#ffff"
            />
    </LinearLayout>
</ScrollView>
